# dom-lib

./: .gitignore  CMakeLists.txt  README.md
sec_eval/: pyproject.toml
sec_eval/src/: __init__.py  base_masked_uint.py  base_uint.py  comparators.py  converters.py  debug.py  operators.py  selectors.py  subclasses.py
sec_eval/tests/: __init__.py  conftest.py  gcmi.py  helpers.py  test_dom_logic.py  test_dom_security.py  test_masked_uint.py  test_statistics.py  test_uint.py
src/: CMakeLists.txt  dom_api.h  dom_csprng.h  dom_errors.c  dom_errors.h  dom_internal_defs.h  dom_internal_funcs.h  dom_internal_undefs.h  dom_types.h
src/converters/: dom_conv.c  dom_conv_atob.c  dom_conv_btoa.c  dom_conv_type.c
src/core/: dom_core_masking.c  dom_core_memory.c
src/internal/: dom_internal_defs.h  dom_internal_funcs.c  dom_internal_funcs.h  dom_internal_undefs.h
src/operators/: dom_arith.c  dom_bool.c  dom_ksa.c  dom_ops_arith.c  dom_ops_bool.c  dom_ops_ksa.c
src/various/: dom_comparators.c  dom_compare.c  dom_selectors.c  dom_utils.c
tests/: CMakeLists.txt  test_dom_comparators.cpp  test_dom_compare.cpp  test_dom_conv.cpp  test_dom_conv_type.cpp  test_dom_core.cpp  test_dom_csprng.cpp  test_dom_errors.cpp  test_dom_internal.cpp  test_dom_ksa.cpp  test_dom_ops.cpp  test_dom_selectors.cpp  test_dom_utils.cpp  test_main.cpp
tools/: convert_crlf.py  debug.c  debug.h  preprocess.py
